--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img
           class="login-heart"
           src="imgs/login-heart.png"
-          alt="Lorem ipsum dolor sit amet consectetur adipisicing elit."
+          alt="Lorem ipsum dolor sit amet consectetur adipisicing elit.fSDGARWGF"
         />
       </div>
 
